# torrent-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.toml  docker-compose.yml  gluetun-auth.toml  pyproject.toml
torrent_cli/: __init__.py  agent.py  app.py  commands.py  config.py  mcp_server.py  prowlarr.py  qbittorrent.py  stack.py  tools.py  tui.py  ui.py
torrent_cli/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py
